add security tests